Fix: Correção nos atributos de CropFertilizationTableModel.java